--- a/docs/terraria/main.css
+++ b/docs/terraria/main.css
@@ -1,60 +1,28 @@
-*{
-	text-align: center;
-	color: #AAA;
-	margin:0;
-}
-h2{color: #AAA;}
-div a{display: block;}
+@import '/main.css';
 #body{
-	background: url(../T/TRBG1.gif);
+	background: url(../RES/Forest_background_17.png);
 	background-size: cover;
 	background-repeat:repeat-x;
-	width: 90%;height:92%;
-	margin: 2% auto;
-	box-shadow:0 0 16px #333,0 0 16px #000;
-	border-radius: 10px 10px 10px 10px;
-	opacity: 0.8;
-	
 	animation: animatedBackground 40s linear infinite;
 }
-#page{
-	width:80%;
-	float: left;
-	border-radius: 10px 0 0 10px;
-}
 #index{
-	width:20%;
+	width:calc(20% - 1px);
 	float: right;
 	border-radius: 0 10px 10px 0;
+	border-left:solid 1px #222;
 }
+.Form{
+	width:80%;height:100%;
+	float:left;
+	border-radius:10px 0 0 10px;
+}
+.footer{font-size: 8px;}
 
-#footer{font-size: 8px;}
-
-.maxheight{height:100%;}
 .gray{
 	background: #000;
 	background-size:100%;
 	opacity: 1;
 }
-.menu{
-	color: #EEE;
-	font-size: 16px;
-	cursor: default;
-}
-.submenu{
-	color: #AAA;
-	font-size: 14px;
-}
-.submenu a:hover{
-	background: #888;
-}
-.layer{
-	position:relative;
-	background-color: #222;
-}
-.vertical{width:1px;height:100%;left: 80%;}
-.horizontal{width:100%;height:1px;}
-
 @keyframes animatedBackground {
 from{background-position:0 0;}
 to	{background-position:calc(100% - 100vw) 0;}
