--- a/docs/terraria/main.css
+++ b/docs/terraria/main.css
@@ -11,6 +11,13 @@
 	border-radius: 0 10px 10px 0;
 	border-left:solid 1px #222;
 }
+iframe{
+	width: 646px;
+    height: 190px;
+    margin: auto;
+    display: block;
+    border: 0;
+}
 .Form{
 	width:80%;height:100%;
 	float:left;
