--- a/docs/main.css
+++ b/docs/main.css
@@ -1,35 +1,12 @@
-*{
-	text-align: center;
-	color: #AAA;
-	margin:0;
-}
+
 h2{color: #AAA;}
 div a{display: block;}
-#body{
-	background: url(RES/BJ2.jpg);
-	/* background-size: 100% 100%; */
-	background-repeat: no-repeat;
-	background-position: center;
-	background-color: #000;
-	width: 90%;height:92%;
-	margin: 2% auto;
-	box-shadow:0 0 16px #333,0 0 16px #000;
-	border-radius: 10px 10px 10px 10px;
-	opacity: 0.8;
+html{
+	width:100%;height:100%;
+	text-align:center;
+	color:#AAA;
+	cursor:default;
 }
-#page{
-	width:80%;
-	float: left;
-	border-radius: 10px 0 0 10px;
-}
-#index{
-	width:20%;
-	float: right;
-	border-radius: 0 10px 10px 0;
-}
-
-#footer{font-size: 8px;}
-
 .maxheight{height:100%;}
 .gray{
 	background: #000;
